--- a/site_card/templates/card/index.html
+++ b/site_card/templates/card/index.html
@@ -1,19 +1,12 @@
 {% extends "base.html" %}
 
+<!-- начало основного блока -->
 {% block content %}
 
 
 <div class="jumbotron text-center">
   <h1>ụbụrụ</h1> 
   <p>с языка <a href="https://ru.wikipedia.org/wiki/%D0%98%D0%B3%D0%B1%D0%BE_(%D1%8F%D0%B7%D1%8B%D0%BA)" class="link" title="Википедия - Игбо(язык)">игбо</a> – мозг или память</p> 
-  <!-- <form>
-    <div class="input-group">
-      <input type="email" class="form-control" size="50" placeholder="Email Address" required>
-      <div class="input-group-btn">
-        <button type="button" class="btn btn-danger">Subscribe</button>
-      </div>
-    </div>
-  </form> -->
 </div>
 
 <!-- Container (About Section) -->
@@ -25,7 +18,7 @@
       	<div class="col-md-6">
       		<h2>О нас</h2>
       		<h3>Мы - команда разработчиков.</h3>
-      		<h4>Наша команда – студенты МГТУ им. Н.Э. Баумана. Мы предоставляем открытые сервисы для нужд наших пользователей. Имеем опыт работы от сферы образования до интеллектуальных систем ухода за растениями.</h4>
+      		<h4>Команда предоставляет открытые сервисы для нужд наших пользователей. Наши проекты находят своё применение в различных областях:от сферы образования, до интеллектуальных систем ухода за растениями.</h4>
       		
       	</div>
       	  <div class="col-md-4">
@@ -48,6 +41,9 @@
   </div>
 </div>
 
+<!-- Блок информации об участниках команды 
+Использованы шаблонизация django 
+-->
 <div id="team" class="container-fluid">
 	<h2>Команда</h2>
 {% if teammates %}
@@ -57,12 +53,12 @@
   	
 
   	<div class="col-sm-4">
-      <span class="glyphicon glyphicon-star logo"></span>
+      <img src="/static/img/{{teammate.photo_name}}", alt="", height="170" href="#", class="img-circle">
       <h3>{{teammate.full_name}}</h3>
     </div>
     <div class="col-sm-8">
-      <h4>{{teammate.short_description_bold}}</h4>
-      <p>{{teammate.short_description}}</p>
+      <h4>{{teammate.short_description}}</h4>
+      <p>{{teammate.full_description}}</p>
       <button class="btn btn-default btn-lg" type="button" data-toggle="collapse" data-target="#collapseExample{{teammate.id}}" aria-expanded="false" aria-controls="collapseExample{{teammate.id}}">
 	    Проекты
 	  	</button>
@@ -76,32 +72,20 @@
   				{% endfor %}
   
 			</ul>
-		    
+		
 		  </div>
 	  </div>
     </div>
   </div>
   <br>
   {% endfor %}
-    {% else %}
-    <p>Вынужденно скрылась</p>  
+{% else %}
+    <p>Решила остаться анонимной</p>  
   
 {% endif %}
 </div>
 
-<!-- <div class="container-fluid bg-grey">
-  <div class="row">
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-globe logo slideanim"></span>
-    </div>
-    <div class="col-sm-8">
-      <h2>Our Values</h2><br>
-      <h4><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-      <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-  </div>
-</div> -->
+
 
 <!-- Container (Services Section) -->
 <div id="services" class="container-fluid text-center">
@@ -147,30 +131,6 @@
 
 <!-- Container (Portfolio Section) -->
 <div id="portfolio" class="container-fluid text-center bg-grey">
-  <h2>Портфолио</h2><br>
-  <h4>Что мы создали</h4>
-  <div class="row text-center slideanim">
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        
-        <p><strong>Проект 1</strong></p>
-        <p>описание проекта 1</p>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <p><strong>Проект 2</strong></p>
-        <p>описание проекта 2</p>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <p><strong>Проект 3</strong></p>
-        <p>описание проекта 3</p>
-      </div>
-    </div>
-  </div><br>
-  
   <h2>Отзывы наших пользователей</h2>
   <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
     <!-- Indicators -->
@@ -247,22 +207,6 @@
       <p><span class="glyphicon glyphicon-phone"></span> <a href="tel:+7(916)-108-42-01">+7(916)-108-42-01</a></p>
       <p><span class="glyphicon glyphicon-envelope"></span> <a href="mailto:nikita.rub@yandex.ru">nikita.rub@yandex.ru</a></p>
     </div>
-    <!-- <div class="col-sm-7 slideanim">
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-        </div>
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-        </div>
-      </div>
-      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
-      <div class="row">
-        <div class="col-sm-12 form-group">
-          <button class="btn btn-default pull-right" type="submit">Send</button>
-        </div>
-      </div>
-    </div> -->
   </div>
 </div>
 
